[project]
name = 'hermes'
version = '4.0.0'
description = 'Hermes sales system integrating TC2, Pipedrive, and Callbooker'
requires-python = '>=3.12'
dependencies = [
    'alembic==1.17.1',
    'httpx-limiter>=0.4.0',
    'fastapi[standard]==0.121.0',
    'sqlmodel==0.0.27',
    'uvicorn==0.38.0',
    'pydantic==2.12.4',
    'pydantic-settings==2.11.0',
    'python-multipart==0.0.20',
    'logfire[requests,fastapi]==4.14.2',
    'sentry-sdk==2.43.0',
    'python-dotenv==1.2.1',
    'psycopg2-binary==2.9.11',
    'asyncpg==0.30.0',
    'httpx==0.28.1',
    'gunicorn==23.0.0',
    'devtools==0.12.2',
    'google-api-python-client>=2.0.0',
    'google-auth>=2.0.0',
    'pytz>=2024.0',
    'typer>=0.17.0',
    'rich>=13.0.0',
]

[dependency-groups]
dev = [
    'devtools>=0.12.2',
    'ruff==0.14.3',
    'pytest==8.4.2',
    'pytest-sugar==1.1.1',
    'coverage==7.11.0',
    'pytest-asyncio==1.2.0',
    'httpx==0.28.1',
    'dirty-equals==0.10.0',
    'pytest-cov==7.0.0',
    'pytest-env==1.2.0',
    'toml==0.10.2',
    'factory-boy==3.3.3',
    'aiohttp==3.13.2',
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ['I']
ignore = ['E402']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.coverage.run]
omit = [
    'tests/*',
    'migrations/*',
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'def __str__',
    'raise NotImplementedError',
    'raise NotImplemented',
    'print',
]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
addopts = '--cov-append --tb=native'
env = [
    'TZ=UTC',
    'testing=True',
    'database_url=postgresql://postgres:postgres@localhost:5432/hermes_test',
    'LOGFIRE_IGNORE_NO_CONFIG=1',
]
filterwarnings = [
    'error',
    "ignore:'crypt'*:DeprecationWarning",
    'ignore::pytest.PytestUnraisableExceptionWarning',
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.alembic]
script_location = 'migrations'
file_template = '%%(year)s%%(month).2d%%(day).2d%%(hour).2d%%(minute).2d_%%(rev)s'


